hphp/hack/test/typecheck/references/pass_by_ref/pass_by_ref_annotation5.php.exp
File "pass_by_ref_annotation5.php", line 3, characters 12-12:
A type specifier is expected here. (Parsing[1002])
File "pass_by_ref_annotation5.php", line 3, characters 12-12:
Encountered unexpected text '&', was expecting a type hint. (Parsing[1002])
