hphp/hack/test/typecheck/references/pass_by_ref/pass_by_ref_annotation5.php
<?hh // partial

function f(&$x) {}

class C {
  public function test() {
    f(&$this);
    10 |> f(&$$);
  }
}
